--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,6 +1,7 @@
 {
   "language_changed_successfully": "تم تغيير اللغة بنجاح",
   "hello_sign_up": "مرحبًا، تسجيل الدخول",
+  "hello": "مرحبًا",
   "account_lists": "الحسابات والقوائم",
   "orders": "الطلبات",
   "cart": "عربة التسوق",
@@ -15,5 +16,6 @@
   "home": "مستلزمات المنزل",
   "grocery": "السوبر ماركت",
   "video_games": "ألعاب الفيديو",
-  "add_to_cart": "أضف إلى عربة التسوق"
+  "add_to_cart": "أضف إلى عربة التسوق",
+  "sign_out": "تسجيل خروج"
 }
