--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,6 +28,15 @@
   "thank_you_your_order_has_been_confirmed!": "thank you, your order has been confirmed!",
   "thank_you_for_shopping_with_us_we_ll_send_a_confirmation_once_your_order_has_shipped_if_you_would_like_to_check_the_status_of_your_orders_please_press_the_link_below.": "thank you for shopping with us we'll send a confirmation once your order has shipped if you would like to check the status of your order(s) please press the link below.",
   "check_your_order": "check your order",
+  "your_orders": "your orders",
+  "please_sign_in_to_check_your_orders": "please sign in to check your orders",
   "subtotal": "subtotal",
-  "forItems": "items"
+  "forItems": "items",
+  "your_payment_has_been_failed": "your payment has been failed",
+  "you_can_retry_the_payment_below_to_continue": "you can retry the payment below to continue",
+  "try_again": "try again",
+  "back_to_home": "back to home",
+  "network_is_not_available_please_check_your_internet": "network is not available please check your internet",
+  "not_found": "not found",
+  "500-server_side_error_occurred": "500 - server side error occurred"
 }
